--- a/indexstyle.css
+++ b/indexstyle.css
@@ -1,3 +1,20 @@
+body {
+    background-color: black;
+    font-family:'Share Tech Mono',monospace;
+}
+
+h1 {
+    font-size: 70px;
+}
+
+h2 {
+    font-size: 40px;
+}
+
+h3 {
+    font-size: 20px;
+}
+
 header {
     margin:40px;
     display: flex;
@@ -9,7 +26,11 @@ header a{
     text-decoration: none;
     font-size: 18px;
     font-family:monospace;
-    
+}
+
+header a:hover{
+    color:red;
+    transition:0.3s;
 }
 
 .homebtn{
@@ -17,8 +38,11 @@ header a{
     margin-right: auto;
 }
 
-body {
-    background-color: black;
+.HomeText {
+    font-size: 20px;
+    color: white;
+    margin-top:120px;
+    line-height: 30px;
 }
 
 .ProfilePage{
@@ -29,12 +53,18 @@ body {
 .ProfileImg img {
     border-radius: 50%;
     margin:30px;
-    height:400px;
-    margin-left: 50px;
+    height:480px;
+    margin-left: 100px;
+    margin-right: 100px;
 }
 
-.HomeText {
-    font-size: 20px;
-    color: white;
-    margin-top:100px;
+/*when screen is shrunk to portrait*/
+@media(max-width:995px){
+    .ProfilePage{
+        flex-direction: column;
+        margin: 5rem 4rem;
+    }
+    .HomeText{
+        margin-top: 0%;
+    }
 }
